[project]
name = "try-point-blank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.2.1",
    "pandas>=2.2.3",
    "pointblank>=0.7.1",
    "polars>=1.25.2",
]

[dependency-groups]
dev = [
    "black[jupyter]>=25.1.0",
    "notebook>=7.3.3",
]
